example/secondfile/objects/ASE_Wholesale_Contract_Number__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASE Wholesale Contract Number</relationshipLabel>
        <relationshipName>ASE_Wholesale_Contract_Number</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account_Name__r.Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broadband_Suffix__c</fullName>
        <label>Broadband Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadband__c</fullName>
        <label>Broadband</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiber__c</fullName>
        <label>Fiber</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Description__c</fullName>
        <formula>IF( Short_Description__c  != &apos;&apos;,Name+&apos; &apos;+ Short_Description__c , Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name &amp; Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPCoS_Suffix__c</fullName>
        <label>PPCoS Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPCoS__c</fullName>
        <label>PPCoS</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Card_Type__c</fullName>
        <label>Rate Card Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Card__c</fullName>
        <label>Rate Card</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rate_Card_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Master 1802</fullName>
                </value>
                <value>
                    <fullName>Fiber Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_1_Suffix__c</fullName>
        <label>Tier 1 Suffix</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_Suffix__c</fullName>
        <label>Tier 2 Suffix</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_3_Suffix__c</fullName>
        <label>Tier 3 Suffix</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ASE Wholesale Contract Number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CNUM #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASE Wholesale Contract Number</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>